Fix overlapping layout

--- a/django_ace/static/django_ace/widget.css
+++ b/django_ace/static/django_ace/widget.css
@@ -32,7 +32,6 @@
 
 .django-ace-max_min {
     float: right;
-    background-position:5px 5px;
     background-repeat:no-repeat;
     padding: 5px;
 
